fix: prevent product images from overflowing card (add position:relative to .product-image)

--- a/CartFlow.Web/wwwroot/css/site.css
+++ b/CartFlow.Web/wwwroot/css/site.css
@@ -480,6 +480,8 @@ body {
   font-size: 3rem;
   font-weight: 800;
   color: var(--img-text);
+  position: relative;
+  overflow: hidden;
 }
 
 .product-image img {
